# BGE

./: .gitignore  .gitmodules  Doxyfile  LICENSE  README.md
Assets/Strings/: English.xml
Game/: Engine.xml  Logging.xml
Source/: CMakeLists.txt
Source/BGE/Actors/: Actor.cpp  Actor.hpp  ActorComponent.hpp  ActorFactory.cpp  ActorFactory.hpp
Source/BGE/Audio/: Audio.cpp  Audio.hpp  OpenALAudio.cpp  OpenALAudio.hpp
Source/BGE/Debugging/: Logger.cpp  Logger.hpp
Source/BGE/Engine/: BGUT.cpp  BGUT.hpp  BaseGameLogic.cpp  BaseGameLogic.hpp  Engine.cpp  Engine.hpp  EngineMain.cpp  EngineStd.cpp  EngineStd.hpp  Interfaces.hpp  Winclude.h
Source/BGE/Graphics/: Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Screenshot.cpp  Screenshot.hpp  Shaders.cpp  Shaders.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Source/BGE/Input/: Joystick.cpp  Joystick.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
Source/BGE/MainLoop/: Initialization.cpp  Initialization.hpp
Source/BGE/Memory/: MemoryPool.cpp  MemoryPool.hpp
Source/BGE/UserInterface/: HumanView.cpp  HumanView.hpp
Source/BGE/Utilities/: Exception.cpp  Exception.hpp  Math.cpp  Math.hpp  PrimeSearch.cpp  PrimeSearch.hpp  Random.cpp  Random.hpp  String.cpp  String.hpp  Templates.hpp  Timer.cpp  Timer.hpp  Types.hpp  Utils.cpp  Utils.hpp
Source/BGEEditor/EditorApp/: Editor.cpp  Editor.hpp
Source/BGEEditor/EditorLib/: Editor.cpp
Source/Lib/glad/include/glad/: gl.h
Source/Lib/glad/src/: gl.c
Source/TestGame/: TestGame.cpp  TestGame.hpp
